[gd_scene load_steps=5 format=3 uid="uid://bcpjahrk7du1b"]

[ext_resource type="Script" path="res://object/weather/ForecastService.gd" id="1_ip16x"]
[ext_resource type="Script" path="res://object/weather/CloudGenerator.gd" id="2_fsae1"]
[ext_resource type="PackedScene" uid="uid://c66mf81m2ysy7" path="res://object/cloud/cloud.tscn" id="3_3yoxt"]

[sub_resource type="Curve3D" id="Curve3D_wm4pu"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -12.2337, 2.60883, -16.4466, 0, 0, 0, 0, 0, 0, -12.8085, 1.79173, 14.1244),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Weather" type="Node3D"]

[node name="Forecast" type="Node3D" parent="."]
script = ExtResource("1_ip16x")

[node name="ForecastTimer" type="Timer" parent="Forecast"]
autostart = true

[node name="CloudGenerator" type="Node3D" parent="."]
script = ExtResource("2_fsae1")
cloud_scene = ExtResource("3_3yoxt")

[node name="SpawnPath" type="Path3D" parent="CloudGenerator"]
transform = Transform3D(1, 0, 0, 0, 0.999634, 0.0270493, 0, -0.0270493, 0.999634, -7.86771, 0.397905, -0.377338)
curve = SubResource("Curve3D_wm4pu")

[node name="SpawnLocation" type="PathFollow3D" parent="CloudGenerator/SpawnPath"]
transform = Transform3D(-0.999823, -0.000502186, 0.0187921, -5.82076e-11, 0.999643, 0.0267137, -0.0187988, 0.026709, -0.999467, -12.2337, 2.60883, -16.4466)

[node name="SpawnCloud" type="Timer" parent="CloudGenerator"]
autostart = true

[connection signal="timeout" from="Forecast/ForecastTimer" to="Forecast" method="_on_forecast_timer_timeout"]
[connection signal="timeout" from="CloudGenerator/SpawnCloud" to="CloudGenerator" method="_on_spawn_cloud_timeout"]
